# libbbf-rs

./: Cargo.toml  LICENSE  README.md  cbindgen.toml
.github/workflows/: main.yml
bbf/: Cargo.toml  build.rs  uniffi.toml
bbf/src/: bbf.udl  bindings.rs  ffi.rs  format.rs  lib.rs  uniffi-bindgen.rs
bbfmux/: Cargo.toml
bbfmux/src/: main.rs
example-webapp/: Cargo.toml  index.html
example-webapp/src/: app.rs  builder.rs  lib.rs  reader.rs  utils.rs
libbbf/: Cargo.toml
libbbf/src/: ffi.rs  format.rs
src/: builder.rs  ffi.rs  format.rs  lib.rs  reader.rs
