[package]
name = "bbf"
version = "0.1.0"
edition = "2024"

[lib]
name = "bbf"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zerocopy = { version = "0.8.33", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9.9"
