[package]
name = "example-webapp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.11"
libbbf = { path = "../libbbf" }
uuid = { version = "1.19.0", features = ["js", "v4"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["File", "FileList", "FileReader", "Blob", "BlobPropertyBag", "Url", "HtmlInputElement", "HtmlAnchorElement", "Document", "Window", "DomStringMap", "Element"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
